# tui-vfx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  publish.sh
crates/tui-vfx/: Cargo.toml
crates/tui-vfx-compositor/: Cargo.toml  README.md
crates/tui-vfx-compositor/src/: lib.rs
crates/tui-vfx-compositor/src/context/: cls_compositor_ctx.rs  mod.rs
crates/tui-vfx-compositor/src/filters/: cls_bracket_emphasis.rs  cls_braille_dust.rs  cls_color_bridged_shade.rs  cls_crt.rs  cls_dim.rs  cls_dot_indicator.rs  cls_glisten_sweep.rs  cls_greyscale.rs  cls_hover_bar.rs  cls_interlace_curtain.rs  cls_invert.rs  cls_kitt_scanner.rs  cls_motion_blur.rs  cls_pattern_fill.rs  cls_pill_button.rs  cls_rigid_shake.rs  cls_shade_scanner.rs  cls_sub_cell_shake.rs  cls_sub_pixel_bar.rs  cls_tint.rs  cls_underline_wipe.rs  cls_vignette.rs  mod.rs
crates/tui-vfx-compositor/src/masks/: cls_blinds.rs  cls_cellular.rs  cls_checkers.rs  cls_diamond.rs  cls_dissolve.rs  cls_noise_dither.rs  cls_path_reveal.rs  cls_radial.rs  cls_spotlight.rs  cls_wipe.rs  col_soft_edge.rs  mod.rs
crates/tui-vfx-compositor/src/pipeline/: cls_composition_options.rs  cls_composition_spec.rs  cls_prepared_filter.rs  cls_prepared_mask.rs  cls_prepared_sampler.rs  cls_render_area.rs  cls_shader_layer_spec.rs  fnc_check_masks.rs  fnc_grade_shadow_cell.rs  fnc_render_pipeline_with_spec.rs  fnc_render_pipeline_with_spec_area.rs  mod.rs  orc_render_pipeline.rs
crates/tui-vfx-compositor/src/samplers/: cls_bounce.rs  cls_crt_jitter.rs  cls_crt_sampler.rs  cls_distortion.rs  cls_fault_line.rs  cls_pendulum.rs  cls_ripple.rs  cls_shredder.rs  cls_sine_wave.rs  mod.rs
crates/tui-vfx-compositor/src/traits/: filter.rs  mask.rs  mod.rs  pipeline_inspector.rs  sampler.rs
crates/tui-vfx-compositor/src/types/: cls_filter_spec.rs  cls_hover_bar_position.rs  cls_mask_spec.rs  cls_sampler_spec.rs  cls_shadow_spec.rs  mask_combine_mode.rs  mod.rs
crates/tui-vfx-compositor/src/utils/: fnc_is_powerline_separator.rs  mod.rs
crates/tui-vfx-compositor/src/widgets/: mod.rs
crates/tui-vfx-compositor/tests/: test_context.rs  test_pipeline.rs  test_types.rs  test_widgets.rs
crates/tui-vfx-compositor/tests/context/: test_cls_compositor_ctx.rs
crates/tui-vfx-compositor/tests/pipeline/: test_fnc_grade_shadow_cell.rs  test_multiple_effects.rs  test_orc_render_pipeline.rs  test_render_pipeline_with_spec.rs
crates/tui-vfx-compositor/tests/types/: test_filter_spec.rs  test_mask_spec.rs  test_sampler_spec.rs
crates/tui-vfx-content/: Cargo.toml  README.md
crates/tui-vfx-content/src/: lib.rs  prelude.rs
crates/tui-vfx-content/src/traits/: mod.rs  text_transformer.rs
crates/tui-vfx-content/src/transformers/: cls_dissolve.rs  cls_glitch_shift.rs  cls_marquee.rs  cls_mirror.rs  cls_morph.rs  cls_numeric.rs  cls_odometer.rs  cls_redact.rs  cls_scramble.rs  cls_scramble_glitch_shift.rs  cls_slide_shift.rs  cls_split_flap.rs  cls_typewriter.rs  cls_wrap_indicator.rs  fnc_get_transformer.rs  fnc_morph_chars.rs  mod.rs
crates/tui-vfx-content/src/types/: cls_content_effect.rs  cls_dissolve_config.rs  cls_mirror_axis.rs  cls_morph_config.rs  cls_scramble_charset.rs  cls_slide_shift_flow_mode.rs  cls_slide_shift_line_mode.rs  cls_typewriter_cursor.rs  mod.rs
crates/tui-vfx-content/src/utils/: fnc_graphemes.rs  mod.rs
crates/tui-vfx-content/tests/: test_transformers.rs  test_utils.rs
crates/tui-vfx-content/tests/transformers/: test_cls_marquee.rs  test_cls_numeric.rs  test_cls_redact.rs  test_cls_scramble.rs  test_cls_slide_shift.rs  test_cls_typewriter.rs  test_fnc_get_transformer.rs
crates/tui-vfx-content/tests/utils/: test_fnc_graphemes.rs
crates/tui-vfx-core/: Cargo.toml  README.md
crates/tui-vfx-core-macros/: Cargo.toml  README.md
crates/tui-vfx-core-macros/src/: col_clean_number.rs  fnc_derive_enum_schema.rs  fnc_derive_struct_schema.rs  fnc_field_meta_tokens.rs  fnc_impl_config_schema.rs  fnc_parse_config_attrs.rs  fnc_parse_scalar_lit.rs  fnc_scalar_lit_from_lit.rs  fnc_scalar_lit_to_scalar_value.rs  lib.rs  types.rs
crates/tui-vfx-core/src/: lib.rs  mixed_signals_schema.rs  time_spec.rs
crates/tui-vfx-core/src/schema/: cls_json_writer.rs  cls_schema_registry.rs  fnc_json_write_field_meta.rs  fnc_json_write_range.rs  fnc_json_write_schema_field.rs  fnc_json_write_schema_node.rs  fnc_json_write_schema_variant.rs  fnc_node_to_json_schema.rs  fnc_schema_node_to_json_pretty.rs  fnc_to_json_schema.rs  (+5 more)
crates/tui-vfx-core/tests/: test_cls_schema_registry.rs  test_derive_macro_phase2.rs  test_fnc_to_json_schema.rs  test_fnc_to_markdown.rs  test_manual_schema.rs  test_schema_output.rs  test_time_spec.rs
crates/tui-vfx-debug/: Cargo.toml  README.md
crates/tui-vfx-debug/src/: config.rs  lib.rs  logger.rs
crates/tui-vfx-geometry/: Cargo.toml  README.md
crates/tui-vfx-geometry/benches/: easing.rs
crates/tui-vfx-geometry/src/: lib.rs
crates/tui-vfx-geometry/tests/: test_easing.rs  test_fnc_vanishing_edge_trim_spec.rs  test_layout.rs  test_legacy_parity.rs  test_paths.rs  test_position_spec.rs  test_slide_arc_interpolation.rs  test_slide_bounce_interpolation.rs  test_slide_direction_defaults.rs  test_slide_path.rs  test_types.rs  test_widgets.rs
crates/tui-vfx-shadow/: Cargo.toml  README.md
crates/tui-vfx-shadow/src/: fnc_render_shadow.rs  lib.rs
crates/tui-vfx-style/: Cargo.toml  README.md
crates/tui-vfx-style/src/: lib.rs
crates/tui-vfx-style/tests/: test_models.rs  test_utils.rs
crates/tui-vfx-types/: Cargo.toml  README.md
crates/tui-vfx-types/src/: braille.rs  cell.rs  color.rs  color_inert.rs  geometry.rs  grid.rs  lib.rs  modifiers.rs  rigid_shake_timing.rs  style.rs
crates/tui-vfx/src/: lib.rs
crates/tui-vfx/tests/: test_full_schema_dump.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/docs/: api_metadata.rs  effect_metadata.rs  extract_rustdoc.rs  gen_ai_context.rs  gen_api.rs  gen_effect_schemas.rs  gen_json.rs  gen_markdown.rs  merge.rs  mod.rs  parse_api_toml.rs  parse_toml.rs  scaffold.rs  validate_api.rs  validate_coverage.rs
xtask/src/recipes/: mod.rs
(+175 files in other folders)
