# <FILE>crates/tui-vfx-core-macros/Cargo.toml</FILE> - <DESC>Derive macros for ConfigSchema</DESC>
# <VERS>VERSION: 0.1.2</VERS>
# <WCTX>Release readiness metadata update</WCTX>
# <CLOG>Add workspace keywords and categories</CLOG>

[package]
name = "tui-vfx-core-macros"
description = "Proc-macro derives for tui-vfx ConfigSchema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# <FILE>crates/tui-vfx-core-macros/Cargo.toml</FILE> - <DESC>Derive macros for ConfigSchema</DESC>
# <VERS>END OF VERSION: 0.1.2</VERS>
