# <FILE>crates/tui-vfx-core/Cargo.toml</FILE> - <DESC>Schema and introspection primitives</DESC>
# <VERS>VERSION: 0.1.2</VERS>
# <WCTX>Release readiness metadata update</WCTX>
# <CLOG>Add workspace keywords and categories</CLOG>

[package]
name = "tui-vfx-core"
description = "Schema and introspection primitives for the tui-vfx ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
tui-vfx-core-macros.workspace = true
mixed-signals.workspace = true
serde.workspace = true
serde_json.workspace = true

# <FILE>crates/tui-vfx-core/Cargo.toml</FILE> - <DESC>Schema and introspection primitives</DESC>
# <VERS>END OF VERSION: 0.1.2</VERS>
