# <FILE>crates/tui-vfx-geometry/Cargo.toml</FILE> - <DESC>Manifest for tui-vfx-geometry library</DESC>
# <VERS>VERSION: 0.1.2</VERS>
# <WCTX>Release readiness metadata update</WCTX>
# <CLOG>Add workspace keywords and categories</CLOG>

[package]
name = "tui-vfx-geometry"
description = "Pure math, layout, and motion primitives for tui-vfx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
# Foundation types (framework-agnostic)
tui-vfx-types.workspace = true
serde.workspace = true
# Introspection protocol
tui-vfx-core.workspace = true
# Signal generators for oscillating paths
mixed-signals.workspace = true

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[[bench]]
name = "easing"
harness = false

# <FILE>crates/tui-vfx-geometry/Cargo.toml</FILE> - <DESC>Manifest for tui-vfx-geometry library</DESC>
# <VERS>END OF VERSION: 0.1.2</VERS>
