# <FILE>crates/tui-vfx/Cargo.toml</FILE> - <DESC>Meta-crate that re-exports all tui-vfx components</DESC>
# <VERS>VERSION: 0.2.1</VERS>
# <WCTX>Release readiness metadata cleanup</WCTX>
# <CLOG>Reference root README for crate documentation</CLOG>

[package]
name = "tui-vfx"
description = "Cell-based visual effects for terminal UIs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
tui-vfx-types.workspace = true
tui-vfx-core.workspace = true
tui-vfx-geometry.workspace = true
tui-vfx-compositor.workspace = true
tui-vfx-style.workspace = true
tui-vfx-content.workspace = true
tui-vfx-shadow.workspace = true

[dev-dependencies]
tui-vfx-debug.workspace = true

# <FILE>crates/tui-vfx/Cargo.toml</FILE> - <DESC>Meta-crate that re-exports all tui-vfx components</DESC>
# <VERS>END OF VERSION: 0.2.1</VERS>
